# TokenBar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  Package.resolved  Package.swift  README.md  appcast.xml  release-notes.override.md  release-notes.override.txt
.github/workflows/: ci.yml  pages.yml  release.yml  update-install-count.yml
Sources/CTB/include/: ctb.h
Sources/TokenBar/: AppDelegate.swift  BetaMigration.swift  DashboardModel.swift  Format.swift  GlassBackground.swift  IconGalleryWindowController.swift  PopoverView.swift  SelfTest.swift  SettingsWindowController.swift  Smoke.swift  StatusItemController.swift  TrayAnimator.swift  TrayIcons.swift  TrayMode.swift  UpdaterService.swift
Sources/TokenBar/Views/: AgentIconView.swift  AgentLimitsCard.swift  DailyView.swift  DashboardTabs.swift  HorizontalWheelScroll.swift  HourlyView.swift  IconGalleryView.swift  ModelsView.swift  MonthlyView.swift  OverviewView.swift  SettingsPanel.swift  SettingsWindowView.swift  StatsView.swift  UsageChartCard.swift  UsageTraceCard.swift  ViewSwitch.swift
Sources/TokenBarCore/: AgentUsage.swift  ClientRegistry.swift  DayBars.swift  Graph.swift  QuotaResolver.swift  TBCore.swift  UsagePace.swift  UsageStats.swift
assets/: icon.icns
crates/tb_core_ffi/src/: agent_grok.rs  agent_history.rs  agent_usage.rs  lib.rs  usage_tail.rs
docs/: install-count.json
docs/knowledge/: README.md  architecture.md  current-state.md  vendor-tokscale.md  verification.md
landing/public/: llms.txt
landing/src/i18n/: copy.ts
scripts/: bundle.sh  check_knowledge.py  make_appcast.sh
(+4 files in other folders)
